[package]
name = "sindex-derive"
version = "0.1.0"
edition = "2021"
authors = ["Roy <varonroy@gmail.com>"]
repository = "https://github.com/varonroy/sindex"
license = "MIT"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
quote = "1.0.30"
syn = { version = "2.0.26", features = ["extra-traits"] }
