[package]
name = "value-derive"
version = "0.1.0"
edition = "2021"
authors = ["Roy <varonroy@gmail.com>"]
repository = "https://github.com/varonroy/sindex"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc_macro_roids = "0.8.0"
proc-macro2 = "1.0"
heck = "0.4.1"

